--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,22 @@
 cmake_minimum_required(VERSION 3.30)
+# Set compilers before project() command
+set(CMAKE_C_COMPILER "/usr/bin/clang")
+set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
+set(CMAKE_LINKER_TYPE LLD)
+
+#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -save-temps=obj -S -emit-llvm")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -save-temps=obj -S -emit-llvm")
+
 project(component_common LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Print compiler info
+message(STATUS "C compiler: ${CMAKE_C_COMPILER}")
+message(STATUS "C++ compiler , linker: ${CMAKE_CXX_COMPILER} , ${CMAKE_LINKER_TYPE})")
+message(STATUS "C++ standard: ${CMAKE_CXX_STANDARD}")
+
 
 find_package(Protobuf REQUIRED)
 find_package(gRPC CONFIG REQUIRED)
@@ -28,8 +42,31 @@ set(SRC_COMMON
   ${SRC_GENERATED}
 )
 
+# Enable testing support
+enable_testing()
+
 add_executable(data_shield
   ${SRC_COMMON}
 )
 
 target_link_libraries(data_shield PRIVATE gRPC::grpc++ protobuf::libprotobuf Threads::Threads)
+
+# Run the server
+add_test(NAME StartServer
+  COMMAND daemonize ${EXECUTABLE_OUTPUT_PATH}/data_shield
+  --server
+)
+set_tests_properties(StartServer PROPERTIES
+    FIXTURES_SETUP SERVER_FIXTURE
+    TIMEOUT 3
+)
+
+# Run the client tests
+add_test(NAME SystemInfo
+  COMMAND data_shield
+  --client
+  sysinfo
+)
+set_tests_properties(SystemInfo PROPERTIES
+    FIXTURES_REQUIRED SERVER_FIXTURE
+)
